# SpaceParty

./: .gitignore  README.md  SpaceParty-workspace.lkshs  SpaceParty-workspace.lkshw  checkMatches.gml
SpaceCaptain.gmx/: SpaceCaptain.project.gmx
SpaceCaptain.gmx/background/: loseScreen.background.gmx  spaceBackground.background.gmx  winScreen.background.gmx
SpaceCaptain.gmx/objects/: hexagon.object.gmx  player_ship.object.gmx  title_control.object.gmx
SpaceCaptain.gmx/rooms/: play.room.gmx  win.room.gmx
SpaceCaptain.gmx/scripts/: Expand_Grid.gml  Generate_Grid.gml  enemyMove.gml  flip.gml  getTilePosition.gml
SpaceCaptain.gmx/sound/: voyage.sound.gmx
SpaceCaptain.gmx/sprites/: earth_spr.sprite.gmx  hexagon_spr.sprite.gmx  mainChar.sprite.gmx  openhexagon_spr.sprite.gmx
SpaceParty.gmx/: SpaceParty.project.gmx  help.rtf
SpaceParty.gmx/Configs/: Default.config.gmx
SpaceParty.gmx/background/: engineer_lose_bg.background.gmx  engineer_win_bg.background.gmx  loseScreen.background.gmx  spaceBackground.background.gmx  titlescreen.background.gmx  winScreen.background.gmx
SpaceParty.gmx/objects/: ach_urple.object.gmx  back_button.object.gmx  captain_button.object.gmx  captain_title_control.object.gmx  enemy_ship.object.gmx  engineer_button.object.gmx  engineer_lose_control.object.gmx  (+14 more)
SpacePartyServer/: SpacePartyServer.cabal
SpacePartyServer/src/: Main.hs  TcpServer.hs
SpacePartyServer/src/SpaceParty/: Main.hs
SpacePartyServer/src/SpaceParty/Network/: Commands.hs  TcpServer.hs
SpacePartyServer/src/SpaceParty/World/: Galaxy.hs  Sectors.hs  Ships.hs
(+97 files in other folders)
