name: SpacePartyServer
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
description:
data-dir: ""

executable SpacePartyServer
    build-depends:
      base -any,
      QuickCheck -any,
      bytestring,
      network >=2.4.2.2,
      cereal,
      ghc-prim,
      binary,
      containers,
      safecopy,
      acid-state==0.12.1,
      mtl,
      Dust-crypto
    main-is: SpaceParty/Main.hs
    buildable: True
    hs-source-dirs: src

test-suite test-SpacePartyServer
    build-depends: QuickCheck -any, base -any
    type: exitcode-stdio-1.0
    main-is: SpaceParty/Main.hs
    buildable: True
    cpp-options: -DMAIN_FUNCTION=testMain
    hs-source-dirs: src
